--- a/FrontEnd/src/styles/base/_reset.scss
+++ b/FrontEnd/src/styles/base/_reset.scss
@@ -1,3 +1,5 @@
+@use '../abstracts' as *;
+
 *,
 *::before,
 *::after {
@@ -10,4 +12,13 @@ h2,
 h3,
 p {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: $color-primary;
+  transition: margin-right 4s;
 }
