--- a/FrontEnd/src/styles/base/_base.scss
+++ b/FrontEnd/src/styles/base/_base.scss
@@ -34,3 +34,47 @@ a:hover {
   background-position: 100% 100%; /*OR bottom right*/
   background-size: 100% 2px;
 }
+
+form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  text-align: start;
+  max-width: 50rem;
+  width: 20rem;
+}
+
+input {
+  max-width: 100%;
+  font-size: $font-size-xs;
+}
+
+label {
+  font-size: $font-size-xs;
+}
+
+button {
+  width: fit-content;
+  min-width: 90px;
+  border-radius: $radius-lg;
+  border-style: none;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  transition: all 0.5s ease-out;
+  background-color: $color-primary;
+  font-size: $font-size-xs;
+  font-weight: $font-weight-bold;
+  color: white;
+}
+
+button .cancel {
+  background-color: grey;
+}
+
+button:hover {
+  background-color: $color-primary-dark;
+  cursor: pointer;
+}
