create checkbox component

--- a/FrontEnd/src/styles/base/_base.scss
+++ b/FrontEnd/src/styles/base/_base.scss
@@ -16,6 +16,10 @@ h1 {
   size: $font-size-xxl;
 }
 
+p {
+  font-size: $font-size-xs;
+}
+
 a {
   font-size: $font-size-xs;
   width: fit-content;
