--- a/FrontEnd/src/styles/base/_base.scss
+++ b/FrontEnd/src/styles/base/_base.scss
@@ -12,8 +12,13 @@ body {
   line-height: $line-height-base;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   size: $font-size-xxl;
+  font-weight: $font-weight-bold;
 }
 
 p {
