--- a/FrontEnd/src/styles/base/_base.scss
+++ b/FrontEnd/src/styles/base/_base.scss
@@ -26,11 +26,11 @@ p {
 }
 
 a {
-  font-size: $font-size-xs;
+  font-size: $font-size-md;
   width: fit-content;
   display: inline-block;
   padding-bottom: 2px;
-  background-image: linear-gradient(#000 0 0);
+  background-image: linear-gradient(#ffffff 0 0);
   background-position: 0 100%; /*OR bottom left*/
   background-size: 0% 2px;
   background-repeat: no-repeat;
