--- a/FrontEnd/src/styles/abstracts/_colors.scss
+++ b/FrontEnd/src/styles/abstracts/_colors.scss
@@ -10,6 +10,7 @@ $color-gray-100: #f7f7f7;
 $color-gray-200: #eeeeee;
 $color-gray-300: #dddddd;
 $color-gray-500: #999999;
+$color-gray-600: #696969;
 $color-gray-700: #333333;
 
 // Semantic
