--- a/FrontEnd/src/styles/abstracts/_colors.scss
+++ b/FrontEnd/src/styles/abstracts/_colors.scss
@@ -11,6 +11,7 @@ $color-gray-200: #eeeeee;
 $color-gray-300: #dddddd;
 $color-gray-500: #999999;
 $color-gray-600: #696969;
+$color-gray-650: #494949;
 $color-gray-700: #333333;
 
 // Semantic
