--- a/FrontEnd/src/styles/base/_base.scss
+++ b/FrontEnd/src/styles/base/_base.scss
@@ -60,8 +60,7 @@ label {
 
 button {
   width: fit-content;
-  min-width: 100px;
-  border-radius: $radius-lg;
+  border-radius: 30px;
   border-style: none;
   padding-left: 1rem;
   padding-right: 1rem;
